package exceptions;

public class FriendshipException extends CustomException {
    public FriendshipException(String message) {
        super(message);
    }
}
