package exceptions;

public class UserAlreadyInGame extends CustomException {
    public UserAlreadyInGame() {
        super();
    }
}
