package exceptions;

public class UserAlreadyLogged extends CustomException {

    public UserAlreadyLogged() {
        super();
    }
}
