package exceptions;

public class UserNotExists extends CustomException {
    public UserNotExists() {
        super();
    }
}
