package exceptions;

public class WrongCredException extends CustomException{
    public WrongCredException() {
        super();
    }
}
