@startuml

title __EXCEPTIONS's Class Diagram__\n

  namespace exceptions {
    class exceptions.ChallengeException {
        + ChallengeException()
        + ChallengeException()
    }
  }
  

  namespace exceptions {
    abstract class exceptions.CustomException {
        + CustomException()
        + CustomException()
    }
  }
  

  namespace exceptions {
    class exceptions.FriendshipException {
        + FriendshipException()
    }
  }
  

  namespace exceptions {
    class exceptions.UserAlreadyExists {
        + UserAlreadyExists()
    }
  }
  

  namespace exceptions {
    class exceptions.UserAlreadyInGame {
        + UserAlreadyInGame()
    }
  }
  

  namespace exceptions {
    class exceptions.UserAlreadyLogged {
        + UserAlreadyLogged()
    }
  }
  

  namespace exceptions {
    class exceptions.UserNotExists {
        + UserNotExists()
    }
  }
  

  namespace exceptions {
    class exceptions.UserNotOnline {
        + UserNotOnline()
    }
  }
  

  namespace exceptions {
    class exceptions.WrongCredException {
        + WrongCredException()
    }
  }
  

  exceptions.ChallengeException -up-|> exceptions.CustomException
  exceptions.FriendshipException -up-|> exceptions.CustomException
  exceptions.UserAlreadyExists -up-|> exceptions.CustomException
  exceptions.UserAlreadyInGame -up-|> exceptions.CustomException
  exceptions.UserAlreadyLogged -up-|> exceptions.CustomException
  exceptions.UserNotExists -up-|> exceptions.CustomException
  exceptions.UserNotOnline -up-|> exceptions.CustomException
  exceptions.WrongCredException -up-|> exceptions.CustomException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
